welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:5: error: not found: type i
	if(isTeen(T[i])){
                    ^